@@ -13,12 +13,13 @@ export DH_OPTIONS
 # this directory, so that the source package is valid.
 # after that, build the source package found in the parent directory.
 
+source_version = $(shell dpkg-parsechangelog | grep ^Version: | awk '{print $$2}')
 target = debian/launchpad-buildd
 topdir = .
 
 slavebins = unpack-chroot mount-chroot update-debian-chroot sbuild-package \
     scan-for-processes umount-chroot remove-build override-sources-list \
-    buildrecipe generate-translation-templates
+    buildrecipe generate-translation-templates slave-prep
 
 BUILDDUID=65500
 BUILDDGID=65500
@@ -63,6 +64,7 @@ binary: binary-indep
 
 clean:
 	dh_clean
+	rm -f slave-prep
 
 prepare:
 
@@ -71,6 +73,8 @@ package: prepare
 
 build:
 	@echo Mmm builders
+	sed -e 's/@@VERSION@@/$(source_version)/' slave-prep.in > slave-prep
+	chmod 755 slave-prep
 
 build-arch: build
 build-indep: build
