@@ -10,6 +10,7 @@ bindport = @BINDPORT@
 ntphost = ntp.buildd
 
 [allmanagers]
+preppath = /usr/share/launchpad-buildd/slavebin/slave-prep
 unpackpath = /usr/share/launchpad-buildd/slavebin/unpack-chroot
 cleanpath = /usr/share/launchpad-buildd/slavebin/remove-build
 mountpath = /usr/share/launchpad-buildd/slavebin/mount-chroot
